# ml-depth-pro

./: .gitignore  ACKNOWLEDGEMENTS.md  LICENSE  README.md  cog.yaml  combine_output.py  convert_to_coreml.py  get_pretrained_models.sh  infer.py  predict.py  pyproject.toml  requirements.txt  temp.py  v1.3_data
dataset/: AM2KDataset.py  BaseDataset.py  HypersimDataset.py  NYUDataset.py  SintelDataset.py  utils.py
depth_pro/: __init__.py  network.py
depth_pro/_component/: decoder.py  encoder.py  fov.py  vit.py
dev/: .gitignore  demo.py
script/: download_weights.sh
src/depth_pro/: __init__.py  depth_pro.py  utils.py
src/depth_pro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/depth_pro/cli/: __init__.py  run.py
src/depth_pro/eval/: boundary_metrics.py  dis5k_sample_list.txt
src/depth_pro/network/: __init__.py  decoder.py  encoder.py  fov.py  vit.py  vit_factory.py
src/tools/: visualize_depth.py  visualize_rerun.py  visualize_rgbd.py
