[project]
name = "depth-pro"
version = "0.1.0"
description = ""
authors = [{ name = "Jan Smółka", email = "jp.smolka@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "numpy>=1.26.1",
    "timm>=1.0.11",
]

[dependency-groups]
dev = [
    "mypy>=1.12.1",
    "ruff>=0.7.0",
    "opencv-python>=4.10.0.84",
    "icecream>=2.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 90

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.poe.tasks]
format = "ruff format"
lint = "ruff check"
